third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-msrv/transmute-mut-src-not-asbytes.stderr
error[E0277]: the trait bound `Src: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsAsBytes`
  --> tests/ui-msrv/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsAsBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsAsBytes`
  --> tests/ui-msrv/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsAsBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
